--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             const peopleList = document.getElementById('peopleList');
 
             const updateList = function () {
-                fetch('https://brsieg99.github.io/getCounters')
+                fetch('/getCounters')
                     .then(response => response.json())
                     .then(data => {
                         peopleList.innerHTML = '';
@@ -46,14 +46,14 @@
             };
 
             window.incrementCounter = function (personId) {
-                fetch(`https://brsieg99.github.io/increment/${personId}`, { method: 'PUT' })
+                fetch(`/increment/${personId}`, { method: 'PUT' })
                     .then(response => response.json())
                     .then(updateList)
                     .catch(error => console.error('Fehler beim Inkrementieren des Zählers', error));
             };
 
             window.decrementCounter = function (personId) {
-                fetch(`https://brsieg99.github.io/decrement/${personId}`, { method: 'PUT' })
+                fetch(`/decrement/${personId}`, { method: 'PUT' })
                     .then(response => response.json())
                     .then(updateList)
                     .catch(error => console.error('Fehler beim Dekrementieren des Zählers', error));
